--- a/administrador/templates/lista_preRegistro.html
+++ b/administrador/templates/lista_preRegistro.html
@@ -15,10 +15,10 @@
                         <span class="title">{{pre.Correo}}</span>
                     </div>
 
-                    <div class="secondary-content">
+                    <div id="opcionesID" class="secondary-content">
                         {% if pre.codigo == None %}
                             <br>
-                            <a href="{% url 'administrador:aceptar_PreRegistro' pre.id %}" class="secondary-content"><i class="medium material-icons icon-blue">done</i></a>
+                            <a onclick="myFunction()" href="{% url 'administrador:aceptar_PreRegistro' pre.id %}" class="secondary-content"><i class="medium material-icons icon-blue">done</i></a>
                             <a class="modal-trigger secondary-content boton-eliminar" href="#delete-modal" data-id="{{pre.id}}" data-nombre="Ale"><i class="medium material-icons icon-red">highlight_off</i></a>
                         {% else %}
                             <h5>Aceptado</h5>
@@ -57,5 +57,23 @@
             var botones = '<a href="#cancelar" class="modal-action modal-close cancel cancel-delete">Cancelar</a>  <a href="/administrador/eliminar_PreRegistro/' + id + '" class="modal-action modal-close delete-color confirmar-eliminar">Aceptar</a>' ;
             $(".modal-footer").html(botones) ;
         }) ;
+
+        function myFunction() {
+            newHTML=' <div class="preloader-wrapper big active">\n' +
+                '      <div class="spinner-layer spinner-blue">\n' +
+                '        <div class="circle-clipper left">\n' +
+                '          <div class="circle"></div>\n' +
+                '        </div><div class="gap-patch">\n' +
+                '          <div class="circle"></div>\n' +
+                '        </div><div class="circle-clipper right">\n' +
+                '          <div class="circle"></div>\n' +
+                '        </div>\n' +
+                '      </div>'
+
+            $("#opcionesID").html(newHTML);
+
+        }
+
+
     </script>
 {% endblock %}
