--- a/administrador/templates/lista_preRegistro.html
+++ b/administrador/templates/lista_preRegistro.html
@@ -59,7 +59,7 @@
         }) ;
 
         function myFunction() {
-            newHTML=' <div class="preloader-wrapper big active">\n' +
+            newHTML=' <div class="preloader-wrapper small active">\n' +
                 '      <div class="spinner-layer spinner-blue">\n' +
                 '        <div class="circle-clipper left">\n' +
                 '          <div class="circle"></div>\n' +
