--- a/administrador/templates/lista_administrador.html
+++ b/administrador/templates/lista_administrador.html
@@ -16,7 +16,7 @@
                     <div class="secondary-content">
                         <br>
                         <a href="{% url 'administrador:editar_administrador' administrador.id %}" class="secondary-content"><i class="medium material-icons icon-blue">mode_edit</i></a>
-                        <a class="modal-trigger secondary-content boton-eliminar" href="#delete-modal" data-id="{{administrador.id}}" data-nombre="{{administrador.first_name}}"><i class="medium material-icons icon-red">delete</i></a>
+                        <a class="modal-trigger secondary-content boton-eliminar" href="#delete-modal" data-id="{{administrador.id}}" data-nombre="{{administrador.first_name}}"><i class="medium material-icons icon-orange">delete</i></a>
                     </div>
                 </div>
             </li>
