--- a/jugadora/templates/jugadora/ver_jugadoras.html
+++ b/jugadora/templates/jugadora/ver_jugadoras.html
@@ -30,7 +30,7 @@
       </div>
       <div class="secondary-content">
         <a href="#" data-target="delete" data-form="{% url 'jugadora:eliminar_jugadora' jugadora.id %}" class="delete-button">
-          <i class="medium material-icons icon-red">delete</i>
+          <i class="medium material-icons icon-orange">delete</i>
         </a>
         <a href="{% url 'jugadora:editar_jugadora' jugadora.id %}">
            <i class="medium material-icons icon-blue">mode_edit</i>
