--- a/torneo/templates/torneo/lista_eventos.html
+++ b/torneo/templates/torneo/lista_eventos.html
@@ -16,7 +16,7 @@
       <td>{{ gol.cantidad }}</td>
       <td>
         <a href="#" data-target="delete" data-form="" class="delete-button">
-          <i class="small material-icons icon-red" onclick="elimina_evento({{gol.id}},1)">delete</i>
+          <i class="small material-icons icon-orange" onclick="elimina_evento({{gol.id}},1)">delete</i>
         </a>
       </td>
     </tr>
@@ -43,7 +43,7 @@
       <td>{{ tarjeta.cantidad }}</td>
       <td>
         <a href="#" data-target="delete" data-form="" class="delete-button">
-          <i class="small material-icons icon-red" onclick="elimina_evento({{tarjeta.id}},2)">delete</i>
+          <i class="small material-icons icon-orange" onclick="elimina_evento({{tarjeta.id}},2)">delete</i>
         </a>
       </td>
     </tr>
@@ -76,7 +76,7 @@
       </td>
       <td>
         <a href="#" data-target="delete" data-form="" class="delete-button">
-          <i class="small material-icons icon-red" onclick="elimina_evento({{tarjeta.id}},3)">delete</i>
+          <i class="small material-icons icon-orange" onclick="elimina_evento({{tarjeta.id}},3)">delete</i>
         </a>
       </td>
     </tr>
@@ -101,7 +101,7 @@
       <td>{{ tarjeta.jugadora }}</td>
       <td>
         <a href="#" data-target="delete" data-form="" class="delete-button" onclick="elimina_evento({{tarjeta.id}},4)">
-          <i class="small material-icons icon-red">delete</i>
+          <i class="small material-icons icon-orange">delete</i>
         </a>
       </td>
     </tr>
