--- a/equipo/templates/equipo/equipo_list.html
+++ b/equipo/templates/equipo/equipo_list.html
@@ -15,7 +15,7 @@
       <p>Representante: {{ Equipo.representante }}</p>
       <div class="secondary-content">
         <a href="#" data-target="delete" data-form="{% url 'equipo:borrar_equipo' Equipo.id %}" class="delete-button">
-          <i class="medium material-icons icon-red">delete</i>
+          <i class="medium material-icons icon-orange">delete</i>
         </a>
         <a href="{% url 'equipo:editar_equipo' Equipo.id %}">
            <i class="medium material-icons icon-blue">mode_edit</i>
