--- a/torneo/templates/torneo/torneo_detail.html
+++ b/torneo/templates/torneo/torneo_detail.html
@@ -44,7 +44,7 @@
           <p>Representante: {{ Equipo.representante }}</p>
           <div class="secondary-content">
             {% if torneo.activo %}
-            <a href="{% url 'torneo:eliminar_equipo' Equipo.id torneo.id %}"><i class="material-icons icon-red">cancel</i></a>
+            <a href="{% url 'torneo:eliminar_equipo' Equipo.id torneo.id %}"><i class="material-icons icon-orange">cancel</i></a>
             {% endif %}
           </div>
         </li>
