--- a/static/css/coaches/pre-registro.css
+++ b/static/css/coaches/pre-registro.css
@@ -63,3 +63,15 @@ textarea {
   transition: background-position 300ms, color 300ms ease, border-color 300ms ease;
   color: #fff;
 }
+
+@media (min-width: 200px) and (max-width: 767px) {
+  .card {
+    width: 90%;
+  }
+  textarea {
+    height: 50px;
+  }
+  h3 {
+    font-size: 1.5em;
+  }
+}
