--- a/templates/nav.html
+++ b/templates/nav.html
@@ -2,7 +2,7 @@
   <nav>
     <div class="nav-wrapper">
       <div class="navito">
-      <a href="#!" class="brand-logo">
+      <a href="{% url 'equipo:welcome' %}" class="brand-logo">
          <img class="logo-plidi" src="{% static 'static_media/logo.svg' %}"/>
       </a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
