--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,7 +8,7 @@
       <div class="anchor"><a href="{% url 'landing:verTorneos' %}">CONVOCATORIAS</a></div>
       <div class="anchor"><a href="{% url 'landing:ver_equipos' %}">EQUIPOS</a></div>
       <div class="anchor"><a href="{% url 'landing:ver_torneos' %}">TORNEOS</a></div>
-      <!--<div class="anchor">GALERÍA</div>-->
+      <div class="anchor"><a href="{% url 'landing:social' %}">SOCIAL</a></div>
       <div class="anchor"><a href="{% url 'landing:ver_organizadores' %}">ORGANIZADORES</a></div>
     </div>
   </div>
@@ -23,7 +23,7 @@
         <li><a class="anchor" href="{% url 'landing:verTorneos' %}">CONVOCATORIAS</a></li>
         <li><a class="anchor" href="{% url 'landing:ver_torneos' %}">TORNEOS</a></li>
         <li><a class="anchor" href="{% url 'landing:ver_equipos' %}">EQUIPOS</a></li>
-        <!--<li><a class="anchor" href="#">GALERÍA</a></li>-->
+        <li><a class="anchor" href="{% url 'landing:social' %}">SOCIAL</a></li>
         <li><a class="anchor" href="{% url 'landing:ver_organizadores' %}">ORGANIZADORES</a></li>
   </ul>
 </div>
