Primer acercamiento de eliminatoria

--- a/landing/templates/landing/lista_partidos.html
+++ b/landing/templates/landing/lista_partidos.html
@@ -1,4 +1,4 @@
-<h4 class="center-align">Jornada {{jornada.jornada}}</h4>
+<h4 class="center-align">{{jornada.jornada}}</h4>
 <br>
 {% for partido in partidos %}
   <div class="row valign-wrapper">
