--- a/landing/templates/landing/torneos.html
+++ b/landing/templates/landing/torneos.html
@@ -59,9 +59,10 @@
             <div class="card-panel">
             <i class="material-icons left black-text ">attach_file</i>
             <span class="black-text">Anexo:</span>
+            {% if Torneo.anexo %}
             <br>
                 <a href="{{ Torneo.anexo.url }}">Documento Anexo</a>
-
+            {% endif %}
           </div>
         </div>
       </div>
