--- a/templates/footer.html
+++ b/templates/footer.html
@@ -9,6 +9,6 @@
       <a href="https://www.facebook.com/PlanLibelula/" ><img class="icon" src="{% static 'static_media/facebook-logo.svg' %}" alt="facebook" height="24" width="24"/></a>
       <a href="mailto:admin@planlibelulas"><img class="icon" src="{% static 'static_media/mail.svg' %}" alt="mail" height="24" width="24"/></a>
     </div>
-    <span class="small"> Plan Libélula Desarrollo Integral</span>
+    <span class="small"> Plan Libélula Desarrollo Integral | <a href="{% url 'login' %}">Acceso</a></span>
   </div>
 </div>
