--- a/torneo/templates/torneo/torneo_editar.html
+++ b/torneo/templates/torneo/torneo_editar.html
@@ -8,7 +8,7 @@
 <form class="container" novalidate action="{% url 'torneo:editar_torneo' torneo.id %}" enctype="multipart/form-data" method="POST">
     {% csrf_token %}
     <div class="row">
-      <div class="col s6 m6 l6">
+      <div class="col s12 m6 l6">
         <p>
           <label>
             {{ form.nombre.label_tag }}
@@ -17,14 +17,33 @@
         </p>
         {{ form.nombre.errors }}
       </div>
-      <div class="col s6 m6 l6">
+      <div class="col s12 m2 l2" id="min">
         <p>
           <label>
             {{ form.categoria.label_tag }}
           </label>
           {{ form.categoria }}
         </p>
-        {{ form.categoria.errors }}</div>
+        {{ form.categoria.errors }}
+      </div>
+      <div class="col s12 m2 l2" id="max">
+        <p>
+          <label>
+            {{ form.categoriaMax.label_tag }}
+          </label>
+          {{ form.categoriaMax }}
+        </p>
+        {{ form.categoriaMax.errors }}
+      </div>
+      <div class="col s12 m2 l2">
+        <p>
+          <br>
+          <label>
+            <input type="checkbox" id="chk" />
+            <span>Categoria Libre</span>
+          </label>
+        </p>
+      </div>
       <div class="col s12">
         <p>
           <label>
@@ -93,4 +112,56 @@
       </div>
     </div>
 </form>
+{% endblock %}
+
+{% block scripts %}
+    {{ block.super }}
+  <script>
+    $(function() {
+    
+      var checkbox = $("#chk");
+      var hidden1 = $("#min");
+      var hidden2 = $("#max");
+      var hiddena = document.getElementById("id_categoria");
+      var hiddenb = document.getElementById("id_categoriaMax");
+      
+      $( document ).ready(function() {
+        if (hiddena.value == 0 && hiddenb.value == 100){
+          hidden1.hide();
+          hidden2.hide();
+          checkbox.prop('checked', true);
+        }
+      });
+      checkbox.change(function() {
+        // Check to see if the checkbox is checked.
+        // If it is, show the fields and populate the input.
+        // If not, hide the fields.
+        if (checkbox.is(':checked')) {
+          // Show the hidden fields.
+          hidden1.hide();
+          hiddena.value= 0;
+          hidden2.hide();
+          hiddenb.value = 100;
+          // Populate the input.
+          
+        } else {
+          // Make sure that the hidden fields are indeed
+          // hidden.
+          hidden1.show();
+          hidden2.show();
+          
+          // You may also want to clear the value of the 
+          // hidden fields here. Just in case somebody 
+          // shows the fields, enters data to them and then 
+          // unticks the checkbox.
+          //
+          // This would do the job:
+          //
+          // $("#hidden_field").val("");
+        }
+      });
+    });
+  
+ 
+  </script>
 {% endblock %}
