Agregar documento FedeMex

--- a/landing/templates/landing/detalle_torneo.html
+++ b/landing/templates/landing/detalle_torneo.html
@@ -1,31 +1,34 @@
-{% extends "base.html" %}
-{% load static %}
-{% block styles %}
-  <link rel="stylesheet" href="{% static 'css/landing/torneo.css' %}">
-{% endblock %}
-{% block main %}
+{% extends "base.html" %} {% load static %} {% block styles %}
+<link rel="stylesheet" href="{% static 'css/landing/torneo.css' %}"> {% endblock %} {% block main %}
 <div class="header">
   <div class="image-header"></div>
   <div class="cover"></div>
   <div class="container">
     <div class="info-column">
-      <h2>{{ torneo.nombre }}</h2>
-      {% if torneo.categoria == 0  and torneo.categoriaMax == 100 %}
-      <h6><strong>Categoría:</strong> Libre</h6>
-      {% else %}
-      <h6><strong>Categoría:</strong> {{ torneo.categoria }} - {{ torneo.categoriaMax }} </h6>
-      {% endif %}
+      <h2>{{ torneo.nombre }}</h2> {% if torneo.categoria == 0 and torneo.categoriaMax == 100 %}
+      <h6><strong>Categoría:</strong> Libre</h6> {% else %}
+      <h6><strong>Categoría:</strong> {{ torneo.categoria }} - {{ torneo.categoriaMax }} </h6> {% endif %}
       <h6><strong>Fecha de Inicio: </strong>{{torneo.fechaInicio}}</h6>
     </div>
   </div>
 </div>
 <div class="content team-detail">
   <div class="container">
-    <h3>Tabla General</h3>
-    </br>
-      <table class='responsive-table'>
-        <thead>
-          <tr>
+    <div class="row">
+      <div class="col s12">
+        <ul class="tabs">
+          <li class="tab col s3"><a  class="active" href="#test1">Tabla General</a></li>
+          <li class="tab col s3"><a href="#test2">Partidos</a></li>
+          <li class="tab col s3"><a href="#test3">Estadísticas por Equipo</a></li>
+          <li class="tab col s3"><a href="#test4">Estadísticas por Jugadora</a></li>
+        </ul>
+      </div>
+      <div id="test1">
+        <h3>Tabla General</h3>
+        </br>
+        <table class='responsive-table'>
+          <thead>
+            <tr>
               <th>POS</th>
               <th>EQUIPO</th>
               <th>PTS</th>
@@ -36,88 +39,122 @@
               <th>GF</th>
               <th>GC</th>
               <th>DG</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for stat in stats %}
+            </tr>
+          </thead>
+          <tbody>
+            {% for stat in stats %}
 
-          <tr>
-            <td>{{ forloop.counter }}</td>
-            <td><img src="{{ stat.equipo.logo.url }}" alt="" class="circle" height="32" width="32"  style="vertical-align:middle"><a href="{% url 'landing:detalle_equipo' stat.equipo.id %}" >{{stat.equipo.nombre}}</a></td>
-            <td>{{ stat.pts }}</td>
-            <td>{{ stat.jj }}</td>
-            <td>{{ stat.jg }}</td>
-            <td>{{ stat.jp }}</td>
-            <td>{{ stat.je }}</td>
-            <td>{{ stat.gf }}</td>
-            <td>{{ stat.ge }}</td>
-            <td>{{ stat.dg }}</td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-      <p>
-        <strong>POS:</strong> Posición
-        <strong>PTS:</strong> Puntos
-        <strong>JJ:</strong> Juegos jugados
-        <strong>JG:</strong> Juegos ganados
-        <strong>JP:</strong> Juegos perdidos
-        <strong>JE:</strong> Juegos empatados
-        <strong>GF:</strong> Goles a favor
-        <strong>GC:</strong> Goles en contra
-        <strong>DG:</strong> Diferencia de goles
-      </p>
-      </br>
-      <hr/>
-      <div class="row">
+            <tr>
+              <td>{{ forloop.counter }}</td>
+              <td><img src="{{ stat.equipo.logo.url }}" alt="" class="circle" height="32" width="32" style="vertical-align:middle"><a href="{% url 'landing:detalle_equipo' stat.equipo.id %}">{{stat.equipo.nombre}}</a></td>
+              <td>{{ stat.pts }}</td>
+              <td>{{ stat.jj }}</td>
+              <td>{{ stat.jg }}</td>
+              <td>{{ stat.jp }}</td>
+              <td>{{ stat.je }}</td>
+              <td>{{ stat.gf }}</td>
+              <td>{{ stat.ge }}</td>
+              <td>{{ stat.dg }}</td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+        <p>
+          <strong>POS:</strong> Posición
+          <strong>PTS:</strong> Puntos
+          <strong>JJ:</strong> Juegos jugados
+          <strong>JG:</strong> Juegos ganados
+          <strong>JP:</strong> Juegos perdidos
+          <strong>JE:</strong> Juegos empatados
+          <strong>GF:</strong> Goles a favor
+          <strong>GC:</strong> Goles en contra
+          <strong>DG:</strong> Diferencia de goles
+        </p>
+        </br>
+        <hr/>
+      </div>
+      <div id="test2">
         <h3>Calendadio por Jornadas</h3>
         {% for jornada in jornadas %}
         <div class="col">
-            <a href="#{{jornada.id}}" onclick="carga_partidos({{jornada.id}})"><h6>{{jornada.jornada}}</h6></a>
+          <a href="#{{jornada.id}}" onclick="carga_partidos({{jornada.id}})"><h6>{{jornada.jornada}}</h6></a>
         </div>
         {% endfor %}
+        <div id="partidos">
+        </div>
       </div>
-      <hr />
-      <div id="partidos">
+      <div id="test3">
+        <h3>Estadísticas</h3>
+        <div class="card-list flex space-between">
+          <div class="card">
+            <span class="card-title"><strong>MEJOR GOLEADORA </strong></span>
+            <ul class="collection">
+              <!-- {% for goles in top_goles %}
+              {% if forloop.first %}
+                  <li class="collection-item avatar big align-items">
+                    <a href="{% url 'landing:detalle_jugadora' equipo.id goles.jugadora__id %}">
+                      {% if goles.jugadora__Imagen %}
+                        <img src="/media/{{goles.jugadora__Imagen}}" alt="{{goles.jugadora__Nombre}} imagen" class="circle big"/>
+                      {% else %}
+                        <img src="{% static 'static_media/default.jpg' %}" alt="{{goles.jugadora__Nombre}} imagen" class="circle big"/>
+                      {% endif %}
+                      <h6><strong>{{ goles.jugadora__Nombre }} {{ goles.jugadora__Apellido }}</strong></h6>
+                      <h6 class="secondary-content top">{{ goles.goles}}</h6>
+                    </a>
+                  </li>
+                {% else %}
+                  <li class="collection-item avatar align-items">
+                    <a href="{% url 'landing:detalle_jugadora' equipo.id goles.jugadora__id %}">
+                      {% if goles.jugadora__Imagen %}
+                        <img src="/media/{{ goles.jugadora__Imagen }}" alt="{{goles.jugadora__Nombre}} imagen" class="circle"/>
+                      {% else %}
+                        <img src="{% static 'static_media/default.jpg' %}" alt="{{goles.jugadora__Nombre}} imagen" class="circle"/>
+                      {% endif %}
+                      <span>{{goles.jugadora__Nombre}} {{goles.jugadora__Apellido}}</span>
+                      <span class="secondary-content no-top">{{ goles.goles }}</span>
+                    </a>
+                  </li>
+                  {% endif %}
+              {% endfor %} -->
+            </ul>
+          </div>
       </div>
+    </div>
   </div>
 </div>
-{% endblock %}
+{% endblock %} {% block scripts %} {{ block.super }}
+<script src=" https://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js "></script>
+<script type="text/javascript">
+  $(document).ready(function() {
+    var csrftoken = $.cookie('csrftoken');
 
-{% block scripts %}
-    {{ block.super }}
-    <script src=" https://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js "></script>
-    <script type="text/javascript">
-        $(document).ready(function(){
-            var csrftoken = $.cookie('csrftoken');
-            function csrfSafeMethod(method) {
-            // these HTTP methods do not require CSRF protection
-                return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-            }
-            $.ajaxSetup({
-                beforeSend: function(xhr, settings) {
-                    if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-                        xhr.setRequestHeader("X-CSRFToken", csrftoken);
-                    }
-                }
-            });
-            $('.modal').modal() ;
-        });
+    function csrfSafeMethod(method) {
+      // these HTTP methods do not require CSRF protection
+      return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+    }
+    $.ajaxSetup({
+      beforeSend: function(xhr, settings) {
+        if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+          xhr.setRequestHeader("X-CSRFToken", csrftoken);
+        }
+      }
+    });
+    $('.modal').modal();
+  });
 
-        function carga_partidos(jornada){
+  function carga_partidos(jornada) {
 
-                var url = '{% url "landing:carga_partidos" %}';
+    var url = '{% url "landing:carga_partidos" %}';
 
-                var jornada = jornada
+    var jornada = jornada
 
-                $.post(url,
-                {
-                    jornada:jornada
-                })
-                .done(function( data ) {
-                    $('#partidos').html(data);
-                });
-                return false;
-        };
-    </script>
+    $.post(url, {
+        jornada: jornada
+      })
+      .done(function(data) {
+        $('#partidos').html(data);
+      });
+    return false;
+  };
+</script>
 {% endblock %}
