--- a/landing/templates/landing/main.html
+++ b/landing/templates/landing/main.html
@@ -67,7 +67,11 @@
    <div class="centered-text">
      <h3>Beneficios de estar afiliado a FEmexFut</h3>
      <p>El principal beneficio que ofrece la Femexfut al estar afiliados los o las futbolistas es jugar protegidos en cuanto a las lesiones que se pudieran dar en los partidos de fútbol, también tener participación en eliminatorias estatales para poder representar al estado en campeonatos nacionales donde al ganar este derecho se les proporciona hospedaje y alimentación. También cuentan con el registro en la pagina de la Femexfut donde aparece liga - equipo y jugador. Hay un apartado en donde se encuentran todos los datos del jugador o jugadora.</p>
-     <!--<div class="button secondary-button">Ver documento oficial</div>-->
+     <div class="button secondary-button">
+       <a href="{% static 'static_media/Beneficios.pdf' %}" target="_blank">
+         Ver documento oficial
+       </a>
+     </div>
    </div>
  </div>
 </div>
