--- a/static/css/coaches/pre-registro.css
+++ b/static/css/coaches/pre-registro.css
@@ -9,7 +9,7 @@ body {
   flex-direction: column;
   height: 100vh;
   width: 100%;
-  background-image: url("../../static_media/cancha.jpg");
+  background-image: url("../../static_media/registro.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
